--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 {% endifinstalled %}
 
 {% compress css %}
+<link rel="stylesheet" href="{% static "css/codehilite.css" %}">
 <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
 <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
 <link rel="stylesheet" href="{% static "css/bootstrap-theme.css" %}">
