--- a/init_theme/static/css/bootstrap.css
+++ b/init_theme/static/css/bootstrap.css
@@ -1000,7 +1000,7 @@ h6,
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
-  color: #ffffff;
+  color: #111;
 }
 h1 small,
 h2 small,
